# qrmi

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  CITATION.bib  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Doxyfile  FAQ.md  INSTALL.md  Makefile  Makefile.helpers  Makefile_common.mk  Makefile_helpers.mk  README.md  Taskfile.yml  build.rs  cbindgen.toml  lychee.toml  pyproject.toml  pytest.toml  qrmi_payload_v1_schema.json  requirements-dev.txt  requirements-distro.txt  run_in_container.sh  rust-toolchain.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: broken-links.yml  build-libqrmi-ppc64le.yml  build-libqrmi.yml  build-qrmi-bins.yml  build-wheels-ppc64le.yml  build-wheels.yml  build.yml  crate-version.yml  detect-secrets.yml  detect_secrets.yaml  dist.yml  libqrmi-tarball-rhel.yml  libqrmi.yml  lint-fmt-python.yml  lint-fmt-rust.yml  on-pull-request.yml  on-push.yml  on-schedule.yml  package-deb.yml  package-rpm.yml  release.yml  sphinx.yml  tarball-libqrmi-el8.yml  tarball-vendor.yml  unittest-python.yml  unittest-rust.yml  wheels.yml
crates/qrmi-core-api/: Cargo.toml  README.md
crates/qrmi-core-api/src/: lib.rs  payload.rs  quantum_resource.rs  resource_provider.rs  target.rs  task_status.rs
dependencies/alice_bob_felis_client/: Cargo.toml  README.md
dependencies/alice_bob_felis_client/.openapi-generator/: FILES
dependencies/alice_bob_felis_client/docs/: InputParamConfiguration.md  JobError.md  JobEvent.md  TargetsService.md
dependencies/alice_bob_felis_client/felis_generated/: Cargo.toml  README.md
dependencies/alice_bob_felis_client/felis_generated/.openapi-generator/: FILES
dependencies/alice_bob_felis_client/felis_generated/docs/: CreateExternalJob.md  Default.md  DefaultValue.md  EventType.md  ExternalJob.md  ExternalJobMetrics.md  HealthService.md  InputParamConfiguration.md  InputParamRangeConstraint.md  Instruction.md  JobsService.md  Max.md  Min.md  TargetAvailability.md  TargetConfiguration.md  TargetStatus.md
dependencies/alice_bob_felis_client/felis_generated/src/apis/: configuration.rs  health_service.rs  jobs_service.rs  mod.rs  targets_service.rs
dependencies/alice_bob_felis_client/felis_generated/src/models/: create_external_job.rs  default.rs  default_value.rs  event_type.rs  external_job.rs  external_job_metrics.rs  http_validation_error.rs  input_param_configuration.rs  input_param_range_constraint.rs  instruction.rs  job_error.rs  job_event.rs  max.rs  min.rs  mod.rs  target_availability.rs  target_configuration.rs  target_status.rs  validation_error.rs  validation_error_loc_inner.rs
dependencies/alice_bob_felis_client/src/: helpers.rs  jobs.rs  lib.rs
dependencies/alice_bob_felis_client/src/apis/: configuration.rs  health_service.rs  jobs_service.rs  mod.rs  targets_service.rs
dependencies/alice_bob_felis_client/src/models/: default.rs  event_type.rs  input_param_configuration.rs  input_param_range_constraint.rs  instruction.rs  job_error.rs  job_event.rs  min.rs  mod.rs  target_availability.rs  target_status.rs  validation_error_loc_inner.rs
dependencies/alice_bob_felis_client/tests/: api.rs
dependencies/direct_access_client/: Cargo.toml  README.md
dependencies/direct_access_client/app/: Cargo.toml  README.md
dependencies/direct_access_client/app/api_versions/: Cargo.toml
dependencies/direct_access_client/app/api_versions/src/: main.rs
dependencies/direct_access_client/app/backend/: Cargo.toml
dependencies/direct_access_client/app/backend/src/: main.rs
dependencies/direct_access_client/app/cancel_job/: Cargo.toml
dependencies/direct_access_client/app/cancel_job/src/: main.rs
dependencies/direct_access_client/app/delete_job/: Cargo.toml
dependencies/direct_access_client/app/delete_job/src/: main.rs
dependencies/direct_access_client/app/job_details/: Cargo.toml
dependencies/direct_access_client/app/job_details/src/: main.rs
dependencies/direct_access_client/app/list_jobs/: Cargo.toml
dependencies/direct_access_client/app/list_jobs/src/: main.rs
dependencies/direct_access_client/app/run_job/: Cargo.toml
dependencies/direct_access_client/app/run_job/src/: main.rs
dependencies/direct_access_client/app/run_primitive/: Cargo.toml
dependencies/direct_access_client/app/run_primitive/src/: main.rs
dependencies/ionq_cloud_client/: Cargo.toml  README.md
dependencies/ionq_cloud_client/src/: client.rs  lib.rs  models.rs
dependencies/ionq_cloud_client/src/models/: backend.rs  device.rs  job.rs
dependencies/iqm_client/: Cargo.toml  README.md
dependencies/pasqal_cloud_client/: Cargo.toml  README.md
dependencies/pasqal_common/: Cargo.toml
dependencies/pasqal_common/src/: lib.rs  retry.rs
dependencies/pasqal_common/tests/: retry.rs
dependencies/pasqal_local_client/: Cargo.toml  README.md
dependencies/qiskit_runtime_client/: Cargo.toml
dependencies/quantum_system_client/: Cargo.toml  README.md
dependencies/quantum_system_client/app/api_versions/: Cargo.toml
dependencies/quantum_system_client/app/api_versions/src/: main.rs
docker/manylinux/: Dockerfile
docs/: 404.rst  CODE_OF_CONDUCT.rst  TROUBLESHOOTING.rst  conf.py  index.rst
docs/_static/: contributors.js  custom.css
docs/additional_resources/: CITATION.rst  FAQ.rst  (+2 more)
examples/: README.md
operator/: Cargo.toml  DESIGN_OUTLINE.md  DIAGRAMS.md  README.md
operator/deploy/: operator.yaml
operator/deploy/crds/: crds.yaml
operator/deploy/rbac/: rbac.yaml
operator/deploy/resources/: alice-bob-felis-claim.yaml  alice-bob-felis-job-annotation.yaml  alice-bob-felis-job-no-annotation.yaml  alice-bob-felis-qr.yaml
operator/docker/alice-bob-felis-example/: Dockerfile
operator/docker/operator/: Dockerfile
operator/src/: acquire.rs  error.rs  main.rs
operator/src/controllers/: job.rs  mod.rs  resource_claim.rs
operator/src/crd/: mod.rs  quantum_resource.rs  quantum_resource_claim.rs
src/: alice_bob.rs  cext.rs  common.rs  ibm.rs  ionq.rs  iqm.rs  lib.rs  models.rs  pasqal.rs  pyext.rs  qrmi_service.rs  resource_provider.rs
(+588 files in other folders)
