[package]
name = "qrmi-core-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
async-trait = "0.1.88"
pyo3 = { version = "0.29.0", features = ["anyhow"], optional = true }
pyo3-stub-gen = { version = "0.23.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
