[package]
name = "alice-bob-felis"
version = "0.1.0"
authors = ["OpenAPI Generator team and contributors"]
description = "The Felis Cloud API lets you execute quantum circuits on emulators and real quantum hardware made by Alice & Bob.  To run a circuit with the API: - Create a job with \"Create Job\", targeting a specific backend (listed by  \"List Targets\"). - Upload the input quantum code of your job in [QIR format](https://github.com/qir-alliance/qir-spec) with \"Upload Input\". - Monitor the job's status with \"Get Job\". - Read the results with \"Download Output\".  The execution stack includes a transpilation step to adapt the input code to the target's gate set. The result of the transpilation can be seen with \"Download Transpiled\".  This API is used by [Alice & Bob's Qiskit provider](https://github.com/Alice-Bob-SW/qiskit-alice-bob-provider), which also serves as a reference implementation.  Using this API requires an API key in the authorization header. Please reach out to Alice & Bob athttps://alice-bob.com/products/quantum-cloud-felis to learn how to get one."
# Override this license by providing a License Object in the OpenAPI.
license = "Unlicense"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "0.12.14", default-features = false, features = ["json", "multipart", "rustls-tls"] }
reqwest-middleware = { version = "0.4.2", features = ["json"] }
reqwest-retry = "0.7.0"