[package]
name = "ionq-cloud-api"
keywords = ["rest-api", "http-client", "api-bindings"]
description = "IonQ Cloud API client library for Rust"
repository.workspace = true
license.workspace = true
rust-version.workspace = true
version = "0.0.1"
edition.workspace = true

[dependencies]
anyhow = { version = "1.0.90", features = ["backtrace"] }
reqwest = { version = "0.12.14", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }