[package]
name = "backend"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/Qiskit/direct-access-client"
license = "Apache-2.0"

[features]
default = []
pulse_defaults = []

[dependencies]
direct-access-api = { workspace = true }
reqwest-retry = "0.7.0"
tokio = { version = "1.40.0", features = ["full"] }
env_logger = "0.11.5"
serde_json = "1.0"
