[package]
name = "run_primitive"
version = "0.2.1"
edition = "2021"

[dependencies]
direct-access-api = { workspace = true }
reqwest-retry = "0.7.0"
tokio = { version = "1.40.0", features = ["full"] }
env_logger = "0.11.5"
serde_json = "1.0"
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
clap = { version = "4.5.20", features = ["derive"] }
