[package]
name = "api_versions"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/Qiskit/quantum-system-client"
license = "Apache-2.0"

[dependencies]
quantum-system-api = { workspace = true }
tokio = { version = "1.40.0", features = ["full"] }
env_logger = "0.11.5"
serde_json = "1.0"
